improved api ergonomics